# swagger.yaml
@@ -1,3 +1,69 @@
-info: {}
-paths: {}
+definitions:
+    Product:
+        description: Product defines the structure for an API product
+        properties:
+            description:
+                description: the description for this product
+                maxLength: 10000
+                type: string
+                x-go-name: Description
+            id:
+                description: the id for the product
+                format: int64
+                minimum: 1
+                type: integer
+                x-go-name: ID
+            name:
+                description: the name for this product
+                maxLength: 255
+                type: string
+                x-go-name: Name
+            price:
+                description: the price fo the product
+                format: float
+                minimum: 0.01
+                type: number
+                x-go-name: Price
+            sku:
+                description: the SKU for the product
+                pattern: '[a-z]+-[a-z]+-[a-z]+'
+                type: string
+                x-go-name: SKU
+        required:
+            - name
+            - price
+            - sku
+        type: object
+        x-go-package: github.com/microservices_grpc/data
+paths:
+    /products:
+        get:
+            description: Return a list of products from the database
+            operationId: listProducts
+            responses: {}
+            tags:
+                - products
+        post:
+            description: |-
+                response:
+                200: productResponse
+                422: errorValidation
+                501: errorResponse
+            operationId: createProduct
+            summary: Create a new product
+            tags:
+                - products
+        put:
+            description: Update a products details
+            operationId: updateProduct
+            responses: {}
+            tags:
+                - products
+    /products/{id}:
+        get:
+            description: Return a list of products from the databse
+            operationId: listSingle
+            responses: {}
+            tags:
+                - products
 swagger: "2.0"
